@@ -79,14 +79,14 @@ class htmlMimeMail
 	* @var boolean
 	*/
 	var $is_built;
-	
+
 	/**
 	* The return path address. If not set the From:
 	* address is used instead
 	* @var string
 	*/
 	var $return_path;
-	
+
 	/**
 	* Array of information needed for smtp sending
 	* @var array
@@ -359,7 +359,7 @@ class htmlMimeMail
 			// If duplicate images are embedded, they may show up as attachments, so remove them.
 			$html_images = array_unique($html_images);
 			sort($html_images);
-	
+
 			for ($i=0; $i<count($html_images); $i++) {
 				if ($image = $this->getFile($images_dir.$html_images[$i])) {
 					$ext = substr($html_images[$i], strrpos($html_images[$i], '.') + 1);
@@ -643,7 +643,7 @@ class htmlMimeMail
 			$replacement = preg_replace('/([\x80-\xFF])/e', '"=" . strtoupper(dechex(ord("\1")))', $value);
 			$input = str_replace($value, '=?' . $charset . '?Q?' . $replacement . '?=', $input);
 		}
-		
+
 		return $input;
 	}
 
@@ -684,12 +684,12 @@ class htmlMimeMail
 				} else {
 					$result = mail($to, $subject, $this->output, implode(CRLF, $headers));
 				}
-				
+
 				// Reset the subject in case mail is resent
 				if ($subject !== '') {
 					$this->headers['Subject'] = $subject;
 				}
-				
+
 				// Return
 				return $result;
 				break;
@@ -698,7 +698,7 @@ class htmlMimeMail
 				require_once(dirname(__FILE__) . '/smtp.php');
 				require_once(dirname(__FILE__) . '/RFC822.php');
 				$smtp = &smtp::connect($this->smtp_params);
-				
+
 				// Parse recipients argument for internet addresses
 				foreach ($recipients as $recipient) {
 					$addresses = Mail_RFC822::parseAddressList($recipient, $this->smtp_params['helo'], null, false);
@@ -725,7 +725,7 @@ class htmlMimeMail
 				}
 				// Add To header based on $recipients argument
 				$headers[] = 'To: ' . $this->_encodeHeader(implode(', ', $recipients), $this->build_params['head_charset']);
-				
+
 				// Add headers to send_params
 				$send_params['headers']	= $headers;
 				$send_params['recipients'] = array_values(array_unique($smtp_recipients));
@@ -744,6 +744,9 @@ class htmlMimeMail
 				// Send it
 				if (!$smtp->send($send_params)) {
 					$this->errors = $smtp->errors;
+					echo gallery_error(gTranslate('Sending mail via smtp method failed with these errors:')) .
+						 '<br>';
+					print_r($smtp->errors);
 					return false;
 				}
 				return true;
